Bug 73469 - i965/sna: DPMS off/on freezes GL application
Summary: i965/sna: DPMS off/on freezes GL application
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-10 10:13 UTC by Harald Judt
Modified: 2017-07-24 22:56 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (24.40 KB, text/plain)
2014-01-10 10:39 UTC, Harald Judt
no flags Details

Description Harald Judt 2014-01-10 10:13:11 UTC
This does not occur with UXA, only with SNA:

Steps to reproduce:
1) Start desktop environment. I use compiz-0.8 as window manager.
2) Launch glxgears, keep it running.
3) Issue the following command:
   xset dpms force off; sleep 2; xset dpms force on

Expected results:
Monitor switches off and on, nothing else happens.

Actual results:
Monitor switches off and on, glxgears is frozen.

Interestingly, compiz is still responsible when performing above steps.

Now replace glxgears with xscreensaver which can turn off the monitor too, and the issue gets more severe. I usually have to kill compiz to get a usable X session again.

On a side note: I often get such messages in dmesg:
[drm] Setting output timings on SDVOB failed
What do they mean? What is SDVOB? Are they harmless?

lspci -v:
00:02.0 VGA compatible controller: Intel Corporation 4 Series Chipset Integrated Graphics Controller (rev 03) (prog-if 00 [VGA controller])
        Subsystem: Dell Device 0276
        Flags: bus master, fast devsel, latency 0, IRQ 44
        Memory at fe800000 (64-bit, non-prefetchable) [size=4M]
        Memory at d0000000 (64-bit, prefetchable) [size=256M]
        I/O ports at ec90 [size=8]
        Expansion ROM at <unassigned> [disabled]
        Capabilities: [90] MSI: Enable+ Count=1/1 Maskable- 64bit-
        Capabilities: [d0] Power Management version 2
        Kernel driver in use: i915

xorg.conf:
Section "Device"
    Identifier  "Intel"
    Driver  "intel"

    # Output configuration
    Option "Monitor-VGA1" "Samsung SyncMaster SA450 VGA"
    Option "Monitor-DVI1" "Samsung SyncMaster SA450 DVI"

    # Tweaks
    Option "AccelMethod" "sna"
    Option "PageFlip" "true"
    Option "TripleBuffer" "true"
    Option "TearFree" "true"
    Option "VSync" "true"
EndSection
Comment 1 Chris Wilson 2014-01-10 10:25:40 UTC
Please attach your Xorg.0.log, and please make sure you are using -intel-2.99.907.
Comment 2 Harald Judt 2014-01-10 10:39:51 UTC
Created attachment 91811 [details]
Xorg.0.log

I'm using the current git version (also affected by bug #55500).
Comment 3 Chris Wilson 2014-01-10 12:06:48 UTC
commit b351f4a0009ce0eddb5866bd49ac59860a44f522
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jan 10 12:01:29 2014 +0000

    sna/dri: Handle TearFree vblanks whilst the pipe is off
    
    As an extra complication for handling TearFree is that if we attempt to
    requeue a swap whilst the pipe is off, that fails. As we have recursed
    from the pixmap migration path, we have to abort the blit but still send
    the event back to the client so that they unblock.
    
    Reported-by: Harald Judt <h.judt@gmx.at>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=73469
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 4 Harald Judt 2014-01-10 12:31:39 UTC
Thanks, I confirm the fast fix solves the problem.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.